--- a/style.css
+++ b/style.css
@@ -71,8 +71,9 @@ body, html {
   transform: translate(-50%, -50%);
   width: 80vw;
   padding: 4vh 3vh;
-  background: #fff;
-  border: 2px dashed gold;
+  background: #E70013;
+  border: 2px dashed rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
   display: none;
   z-index: 10;
   text-align: center;
@@ -120,7 +121,7 @@ body, html {
 
 @keyframes spin {
   0% { transform: translateY(0); }
-  100% { transform: translateY(-60vh); }
+  100% { transform: translateY(-70vh); }
 }
 
 #playButton {
@@ -130,7 +131,8 @@ body, html {
   transform: translate(-50%, -50%);
   padding: 2vh 4vh;
   font-size: 3vh;
-  background-color: gold;
+  background-color: rgb(253, 88, 3);
+  color: rgb(253, 249, 227);
   border: none;
   border-radius: 1vh;
   box-shadow: 0 0 1vh rgba(0, 0, 0, 0.3);
